2003-09-29  Koblinger Egmont  <egmont@uhulinux.hu>

	* main.c (copy_other_pathname): Trailing slash in not always
	inserted when it should be.

2003-09-29  Andrew V. Samoilov  <sav@bcs.zp.ua>

	* find.c (do_search): Use strncpy() instead if unsafe strcpy().
	Check mc_(l)stat() return values.

2003-09-24  Pavel Roskin  <proski@gnu.org>

	* key.c (xterm_key_defines): More sequences for gnome-terminal.

2003-09-23  Pavel Roskin  <proski@gnu.org>

	* key.c (xterm_key_defines): Add more sequences.

2003-09-22  Pavel Roskin  <proski@gnu.org>

	* find.c (find_file): Don't call file_mark(), it would use
	uninitialized data.
	* main.c (panel_clean_dir): Make panel dirty.

	* glibcompat.c: New file for compatibility with older versions
	of glib.
	* glibcompat.h: Likewise.
	* Makefile.am: Add the new files SOURCES.
	* global.h: Include glibcompat.h.

	* menu.c (menu_scan_hotkey): Use g_strlcpy() to avoid undefined
	behavior when using strcpy() on overlapping strings.
	* profile.c (GetSetProfile): Likewise.
	* widget.c (button_scan_hotkey): Likewise.
	Found by Valgrind.

2003-09-13  Pavel Roskin  <proski@gnu.org>

	* dlg.c (dlg_replace_widget): Clean rewrite.  It was broken
	after eliminating Widget_Item.

	* menu.h: Return to keeping dialog id instead of a widget
	pointer for previous widget.  The widget can be replaced in the
	meantime.
	* dlg.c (dlg_select_by_id): New function, essentially a cleaner
	implementation of dlg_select_nth_widget().

	* dlg.h: Remove "first" field for dialogs and DLG_HAS_MENUBAR.
	* dlg.c (dlg_mouse_event): Remove menubar hack.
	* screen.c (do_panel_event): Redirect mouse events on the upper
	frame to the menubar if it's invisible.
	(panel_event): Don't repaint the panel after redirected events.

2003-09-12  Pavel Roskin  <proski@gnu.org>

	* screen.c (panel_event): Make sure that the panel is repainted
	after the event is processed.

	* hotlist.c (l_call): Fix incorrect calls to hotlist_callback().
